--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
-    "vue": "^3.3.4",
+    "vue": "^3.3.8",
     "vue-router": "^4.2.5",
     "vuex-persistedstate": "^4.1.0"
   },
